--- a/ecom/templates/base.html
+++ b/ecom/templates/base.html
@@ -46,10 +46,10 @@
   {% comment %} <script src={% static 'js/owl.carousel.min.js' %}></script> {% endcomment %}
   <script src={% static 'js/jquery.magnific-popup.min.js' %}></script>
   <script src={% static 'js/aos.js' %}></script>
-  <script src={% static 's/jquery.animateNumber.min.js' %}></script>
+  {% comment %} <script src={% static 's/jquery.animateNumber.min.js' %}></script> {% endcomment %}
   <script src={% static 'js/bootstrap-datepicker.js' %}></script>
   <script src={% static 'js/scrollax.min.js' %}></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  {% comment %} <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script> {% endcomment %}
   {% comment %} <script src={% static 'js/google-map.js' %}></script> {% endcomment %}
   <script src={% static 'js/main.js' %}></script>
 </body>
