--- a/ecom/templates/cart/cart.html
+++ b/ecom/templates/cart/cart.html
@@ -8,9 +8,10 @@
 
     <section class="ftco-section ftco-cart">
         <h1 class=" text-center scs">Cart</h1>
+        {% if cart_item %}
 			<div class="container">
 				<div class="row">
-    			<div class="col-md-12 ftco-animate">
+    			<div class="col-md-12 ">
     				<div class="cart-list">
 	    				<table class="table">
 						    <thead class="thead-primary">
@@ -24,12 +25,13 @@
 						      </tr>
 						    </thead>
 						    <tbody>
+                            
                             {% for cart_item in cart_item %}
 						      <tr class="text-center">
                                 
 						        <td class="product-remove"><a href="/remove_cart/{{cart_item.id}}"><span class="ion-ios-close"></span></a></td>
 						        
-						        <td class="image-prod"><div class="img" style="width: 200px;  background-image:url({{ cart_item.product_id.image1.url }});" ></div></td>
+						        <td class="image-prod"><div class="img" style="width: 200px;  background-image:url({{ cart_item.product_id.image1.url }}); " ></div></td>
 						        
 						        <td class="product-name">
 						        	<h3>{{ cart_item.product_id.brand  }} </h3>
@@ -54,7 +56,7 @@
                         
 						      </tr>
                             {% endfor %}
-						     
+            
 						    
                             </tbody>
 						  </table>
@@ -62,21 +64,25 @@
     			</div>
     		</div>
     		<div class="row justify-content-end mt-4">
-                <div class="col col-lg-5 col-md-6 mt-5 cart-wrap ftco-animate">
+                <div class="col col-lg-6 col-md-6 mt-5 cart-wrap ftco-animate">
                     <form method="post" action="" >
                         {% csrf_token %}
+                        <hr>
                         <div class="form-row p-4 ">
-                            <div class="col-8" >
+                            
+                            <div class="col-8 col-md-6" >
+                         
                                 <!-- <label for="coupon" class="sr-only">Apply Coupon:</label> -->
                                 <input type="text" class="form-control" id="coupon" name="coupon_code" placeholder="Enter coupon code">
                             </div>
-                            <div class="col-2">
-                                <button type="submit" class=" btn-warning ">&nbsp;Apply &nbsp;</button>
+                            <div class="text-center">
+                                <button type="submit" class=" btn-warning  p-2"> Apply</button>
                             </div>
-                            <div class="col-2">
-                                <button type="button" class=" btn-danger" id="removeCoupon">Remove</button>
+                            <div class="">
+                                <button type="button" class=" btn-danger p-1" id="removeCoupon">Remove</button>
                             </div>
                         </div>
+                        <hr>
                     </form>
             
                     <div class="cart-total mb-3">
@@ -99,19 +105,25 @@
                             <span>₹{{total}}</span>
                         </p>
                     </div>
-                    <p class="text-center"><a href="checkout.html" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
+                    <p class="text-center"><a href="/checkout/" class="btn btn-primary py-3 px-4">Proceed to Checkout</a></p>
                 </div>
+                
             </div>
 			</div>
 		</section>
-		
+		{% else %}
+        <div class="bg-light m-4 p-4">
+            <div class="h4  text-center mb-4"> Cart is empty </div>
+            <div class="text-center mb-4"> <a href="/shop/" class="btn btn-primary py-3 px-4">Continue Shopping</a>   </div>
+        </div>
+        {% endif %}
 
 {% include 'footer.html' %}
     
   
 
   <!-- loader -->
-  <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+  {% comment %} <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div> {% endcomment %}
 
       {% endblock maincontent %}
   </body>
