--- a/ecom/templates/shop/shop.html
+++ b/ecom/templates/shop/shop.html
@@ -21,7 +21,7 @@
                         <div class="col-sm-12 col-md-6 col-lg-4 d-flex  ">
                             <div class="product d-flex flex-column align-items-baseline justify-content-center align-content-center">
                                 <a href="/singleproduct/{{prod.id}}" class="img-prod "><img class="img-fluid" src="{{prod.image1.url}}" alt="shoe">
-                                    <span class="status">50% Off</span>
+                                    {% comment %} <span class="status">50% Off</span> {% endcomment %}
                                     <div class="overlay"></div>
                                 </a>
                                 <div class="text py-3 pb-4 px-3  ">
